--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" type="text/css" href="css/index.css" />
 
         <link rel="stylesheet" type="text/css" href="css/mobile-nav.css" />
-        <link rel="stylesheet" type="text/css" href="css/topcoat-mobile-dark.css">
+        <link rel="stylesheet" type="text/css" href="css/topcoat-mobile-light.css">
         <title>Angular PhoneGap Sample</title>
     </head>
     
